--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^17.1.0",
     "rxjs": "~7.8.0",
