--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "humbleicons": "^1.10.0",
     "ng-zorro-antd": "^17.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
